--- a/travel-companion-frontend/src/App.css
+++ b/travel-companion-frontend/src/App.css
@@ -105,3 +105,33 @@ body {
   background-color: #e5f7f0;
   border-color: #d8f7eb;
 }
+
+.location-search-input{
+  font-size: 16px;
+line-height: 1.5;
+background: #FFFFFF;
+background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 19 19'><path fill='%23838D99' d='M13.98 12.57a2 2 0 0 1 1.93.52l2.5 2.5a2 2 0 0 1-2.82 2.82l-2.5-2.5a2 2 0 0 1-.52-1.93l-1.38-1.37a7 7 0 1 1 1.42-1.42l1.37 1.38zm-3.37-2.03a5 5 0 1 0-7.08-7.08 5 5 0 0 0 7.08 7.08z'></path></svg>");
+background-repeat: no-repeat;
+background-position: 10px 10px;
+background-size: 20px 20px;
+border: 1px solid #C5CBD5;
+box-shadow: inset 0 1px 4px 0 rgba(0,0,0,0.20);
+border-radius: 8px;
+width: 300px;
+padding: .5em 1em .5em 2.5em;
+}
+
+.input-suggestions,.suggestion-item, .suggestion-item:hover,suggestion.active{
+  font-family: 'Lato',sans-serif;
+  /* width: 500px; */
+  /* padding: .5em 1em .5em 2.5em; */
+
+  /* height: 60px; */
+  background-color: #fff;
+  border-bottom: 1px #000 dotted !important;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 400;
+  color: #000;
+}
