--- a/travel-companion-frontend/src/index.css
+++ b/travel-companion-frontend/src/index.css
@@ -85,15 +85,6 @@ a {
 
 /* search Location */
 
-/* * {
-  box-sizing: border-box;
-}
-body {
-  font-family: "Open Sans";
-  background: #2c3e50;
-  color: #ecf0f1;
-  line-height: 1.618em;
-} */
 .wrapper {
   max-width: 50rem;
   width: 100%;
@@ -136,7 +127,7 @@ body {
   top: -0.25rem;
   transition: top 0.25s;
 }
-.tab-content {
+/* .tab-content {
   height: 12rem;
   position: absolute;
   z-index: 1;
@@ -148,8 +139,8 @@ body {
   border-bottom: 0.25rem solid #bdc3c7;
   opacity: 0;
   transition: all 0.35s;
-}
-.tab-switch:checked + .tab-label {
+} */
+/* .tab-switch:checked + .tab-label {
   background: #fff;
   color: #2c3e50;
   border-bottom: 0;
@@ -162,4 +153,36 @@ body {
   z-index: 2;
   opacity: 1;
   transition: all 0.35s;
+} */
+
+button.btn.btn-lg.btn-primary {
+  background: #277890;
+  font-size: 14px;
+  padding: 8px 62px;
+}
+
+label, h1, p{
+  color: #277890;
+}
+
+
+.bg-img-sign-up{
+  background-image: url("./assests/images/sign-In.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0;
+  max-width: 100% !important;
+}
+
+.percent-100{
+  height: 100vh !important;
+}
+
+.list-group-flush>.list-group-item:last-child{
+  text-decoration: underline;
+  color: orange;
+}
+.form-group {
+  margin-bottom: 1rem;
 }
