--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ html {
 
 /* banner css */
 .banner {
-  background-image: url(./assests/images/banner.png);
+  background-image: url(assests/images/banner.png);
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
@@ -56,7 +56,7 @@ html {
 }
 
 .bg-img {
-  background-image: url(./assests/images/banner.png);
+  background-image: url(assests/images/banner.png);
 }
 
 @media screen and (max-width: 1024px) {
