Loader for all api & Search location dropdown

--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ input::placeholder {
 .container {
   position: relative;
   /* width: 828px; */
-  height: 315px;
+  /* height: 315px; */
   /* margin: auto; */
   /* margin-top: 2em; */
 
