--- a/src/index.css
+++ b/src/index.css
@@ -186,3 +186,11 @@ label, h1, p{
 .form-group {
   margin-bottom: 1rem;
 }
+
+.nav-tabs .nav-link{
+  color: #495057;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+  color: #0d6efd !important;
+}
